# talent-trends

./: Cargo.toml  Dockerfile  README.md  classes.toml  docker-compose.yml  settings.toml
service/: README.md  talent-trends-restart.service  talent-trends-restart.timer
src/: config.rs  main.rs  style.rs  templates.rs  warcraftlogs.rs
